--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 
 
 
+
   <main>
     <h1>Calculators</h1>
     <div class="calculator-grid">
@@ -92,33 +93,34 @@
         </a>
       </div>
       <div class="calculator-card simple-interest">
-        <a href="./calculator/udt.html" style="display:block; text-decoration:none; color:inherit;">
+        <a href="./calculator/udt_calculator.html" style="display:block; text-decoration:none; color:inherit;">
         <h2>Unified Daily Total Calculator</h2>
         <p>Easily calculate and track your total daily earnings, expenses, or tasks in one unified view.</p>
         </a>
       </div>
       <div class="calculator-card sip">
-        <a href="./calculator/udt.html" style="display:block; text-decoration:none; color:inherit;">
-        <h2>Comparison Old vs New Tax Calculator</h2>
-        <p>The Old vs New Tax Calculator helps you compare tax payable under the old and new tax regimes.</p>
+        <a href="./calculator/bmc_teacher_salary_calculator.html" style="display:block; text-decoration:none; color:inherit;">
+        <h2>BMC Teacher Salary Calculator</h2>
+        <p>The BMC Teacher Salary Calculator helps you estimate your monthly and annual salary, allowances, and deductions as per BMC norms.</p>
                 </a>
-      </div>
+    </div>
+
       <div class="calculator-card gratuity">
-        <a href="./calculator/udt.html" style="display:block; text-decoration:none; color:inherit;">
+        <a href="./calculator/retirement_benefit_calculator.html" style="display:block; text-decoration:none; color:inherit;">
         <h2>Retirement Benefit Calculator</h2>
         <p>A Retirement Benefit Calculator helps you estimate how much money you’ll get after retirement.</p>
                 </a>
       </div>
       <div class="calculator-card pf">
-        <a href="./calculator/udt.html" style="display:block; text-decoration:none; color:inherit;">
+        <a href="./calculator/increment_calculator.html" style="display:block; text-decoration:none; color:inherit;">
         <h2>Increment Calculator</h2>
         <p>An Increment Calculator helps you find out your new salary after a pay raise.</p>
                 </a>
       </div>
       <div class="calculator-card salary">
-        <a href="./calculator/udt.html" style="display:block; text-decoration:none; color:inherit;">
-        <h2>Salary Calculator</h2>
-        <p>Calculates the employer payments to the employee for the work done.</p>
+        <a href="./calculator/tax_calculator.html" style="display:block; text-decoration:none; color:inherit;">
+        <h2>Comparison Old vs New Tax Calculator</h2>
+        <p>The Old vs New Tax Calculator helps you compare tax payable under the old and new tax regimes.</p>
                 </a>
       </div>
     </div>
