--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- SEO Meta Tags -->
   <meta name="description" content="Explore powerful and easy-to-use financial calculators to manage your salary, pension, and retirement planning with confidence.">
   <meta name="keywords" content="salary calculator, pension calculator, financial tools, retirement planning, DA calculator, BMC salary">
-  <meta name="author" content="Your Company Name">
+  <meta name="author" content="BMC Employee Solution">
 
   <!-- Favicon (Optional) -->
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
