--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
   <!-- Page Title -->
   <title>BMC Employee Solution</title>
 
+
+  <!-- Open Graph Tags -->
+  <meta property="og:title" content="BMC Employee Solution" />
+  <meta property="og:description" content="Explore powerful financial calculators for salary, pension, and retirement." />
+  <meta property="og:image" content="https://prajwalrodrix.github.io/BMC/images/website.png" />
+  <meta property="og:url" content="https://prajwalrodrix.github.io/BMC/" />
+  <meta property="og:type" content="website" />
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="BMC Employee Solution" />
+  <meta name="twitter:description" content="Explore powerful financial calculators for salary, pension, and retirement." />
+  <meta name="twitter:image" content="https://prajwalrodrix.github.io/BMC/images/website.png" />
+
+
+
   <!-- SEO Meta Tags -->
   <meta name="description" content="Explore powerful and easy-to-use financial calculators to manage your salary, pension, and retirement planning with confidence.">
   <meta name="keywords" content="salary calculator, pension calculator, financial tools, retirement planning, DA calculator, BMC salary">
